fixed spacing and colors

--- a/grafitestyles.css
+++ b/grafitestyles.css
@@ -168,7 +168,7 @@ html, body{
   font-family: 'Poppins', sans-serif;
   font-size: 1vw;
   position: absolute;
-  top: 25vh;
+  top: 28vh;
   right: 8vw;
   width: 50vw;
 }
